# Parser-Bot

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_12_15_0313-d27d797f0e88_init_migration.py  2024_12_15_0319-0f814368aa69_init.py  2024_12_16_2153-f8596c4d2c54_best_offer_table.py  2024_12_16_2158-97560cd6ee1f_fix_offer.py
parser_bot/: main.py
parser_bot/core/: config.py  db.py  db_middleware.py  parsing.py
parser_bot/curd/: bestoffer.py  user.py
parser_bot/handlers/: commands.py  commands_router.py
parser_bot/models/: bestoffer.py  user.py
parser_bot/schemas/: bestoffer.py  user.py
parser_bot/utils/: .envexample  createplot.py  keyboard.py  states.py
